--- a/writeup/conjoint_experiment.tex
+++ b/writeup/conjoint_experiment.tex
@@ -1,4 +1,5 @@
-Two FDI projects that want to enter your province. Please carefully read the following description of the projects. Then, please indicate which project you prefer.
+\begin{quote}
+Two FDI projects want to enter your province. Please carefully read the following description of the projects. Then, please indicate which project you prefer.
 
 \begin{center}
   \begin{tabular}{ c | c | c }
@@ -14,7 +15,9 @@ Two FDI projects that want to enter your province. Please carefully read the fol
 \end{center}
 
 If you have to choose, which project do you prefer to grant investment license? Project 1 / Project 2
+\end{quote}
 
+The five dimensions will be given random values as follows.
 \begin{itemize}
 \item Industry: textile, electronics, automobile, consumer product
 \item Labor force: 5, 50, 100, 200, 500 employees
