--- a/writeup/preliminary_evidence.tex
+++ b/writeup/preliminary_evidence.tex
@@ -1,11 +1,11 @@
-In this section, I present some evidences that motivate the puzzle.
+I present some evidences that motivate the puzzle and the hypothesized link between FDI and corruption:
 
 \begin{itemize}
 	\item The spillover effect of FDI on growth is highly variable. For example, FDI is found to be growth-enhancing in East Asia, but not in Latin America \citep{Zhang2001}. Similarly, the effect of FDI on domestic investment also varies across countries and regions. FDI is found to crowd in investment in some countries (e.g. Ghana, Senegal, South Korea, Pakistan, Thailand, etc.) but crowd out in others \citep{Agosin2005}.
 	
-	\item Despite the prevalent concern with discrimination against foreign firms, the Wold Bank Enterprise Survey finds that foreign firms actually face fewer obstacles while doing business \citep{Batra2003}. The gap in the treatment of foreign and domestic firms also varies across countries (\Cref{fig:fdi_domestic_treatment}).
+	\item Despite the prevalent concern with discrimination against foreign firms, the World Bank Enterprise Survey finds that foreign firms actually face fewer obstacles while doing business \citep{Batra2003}. The gap in the treatment of foreign and domestic firms also varies across countries (\Cref{fig:fdi_domestic_treatment}).
 	
-	\item The correlation between corruption and FDI is negative. However, there is a lot of unexplained variance at the high end of FDI. Countries with low level of FDI are always very corrupt, but countries with high level of FDI can be as well (\Cref{fig:fdi_corruption}).
+	\item The correlation between corruption and FDI is negative. However, there is a lot of unexplained variance at the high end of FDI. Countries with high level of FDI run the gamut of corruption (\Cref{fig:fdi_corruption}).
 	
 	\begin{figure}[!ht]
 	\includegraphics[width=\textwidth, height=\textheight,keepaspectratio]{../figure/fdi_corruption}
